# apiSyncer

./: .envrc  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  mySQLref.sql
.cache/clangd/index/: DataSyncMagnr.cpp.4E732361F44B463D.idx  DataSyncMagnr.h.0889E379FC45A82C.idx  ObjectNode.cpp.E4D9A1966C6F60A4.idx  ObjectNode.h.01FF55461E88AA8D.idx  database.cpp.5098CEAA611A5865.idx  database.h.EEE71A421A42E552.idx  main.cpp.B323FAAB581AAF61.idx  routes.cpp.4AF7DE9ABE8B838A.idx  routes.h.91A494DCA49F3C05.idx
divideConcour/: a.out  cppconn.cpp  crow.cpp
include/: DataSyncMagnr.cpp  DataSyncMagnr.h  ObjectNode.cpp  ObjectNode.h
src/: database.cpp  database.h  main.cpp  routes.cpp  routes.h
